template.distillery/sass!os.scss
/* This file was generated by Ocsigen Start.
   Feel free to use it, modify it, and redistribute it as you wish.
*/

/* Default CSS for Ocsigen Start */

@import url('https://fonts.googleapis.com/css?family=Raleway');

$main-color: #25a;
$dark-color: #445;
$breakpoint1: 720px;

html { box-sizing: border-box; }
*, *::before, *::after { box-sizing: inherit; }

body {
    margin: 0;
    font-family: 'Raleway', sans-serif;
    font-size: 14px;
}

a, a:visited {
    text-decoration: none;
    color: #666;
    cursor: pointer;
}

button, input {
    border: none;
}

button, input[type="submit"], input[type="button"] {
    cursor: pointer;
}

.button {
    border-radius: 2px;
    box-shadow: 0 2px 2px rgba(0,0,0,.28);
    background-color: white;
    color: #666;
    text-transform: uppercase;
    font-size: 10px;
    padding: 5px 16px;
    margin: 5px;
}

input {
    padding: 5px;
    border-radius: 2px;
}

.connected-user-box {
    display: flex;
    align-items: center;
    .fa-user {
        height: 50px;
        width: 50px;
        font-size: 22px;
        &::before {
            line-height: 50px;
        }
    }
}

.os-page-header {
    height: 50px;
    background-color: $main-color;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    box-shadow: 0 4px 8px rgba(0,0,0,.28);
    padding: 0 10px 0 50px;
    .connected-user-box {
        color: white;
    }
}

a.os-page-header-app-name {
    text-decoration: none;
    color: white;
    font-size: 30px;
}

.ot-dr-toggle-button {
    color: white;
}

.os-drawer-menu {
    padding: 0;
    &, ul {
        list-style-type: none;
    }
    .os-drawer-item {
        display: block;
        padding: 16px;
    }
    a:hover {
            background-color: $dark-color;
            color: white;
        }
    .connected-user-box {
        border-bottom: 1px solid #ddd;
    }
}

.os-drawer-submenu {
    padding: 0;
    > li > a {
        display: block;
        padding: 5px 5px 5px 50px;
    }
}

.os-body {
    padding: 16px;
}

.os-page-footer {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: #ddd;
    padding: 16px;
    font-size: 10px;
    text-align: center;
}

.os-welcome-box, .os-sign-in, .os-sign-up, .os-forgot-pwd {
    h2 {
        font-size: 14px;
        margin: 16px 0 4px 0;
    }
    form {
        display: flex;
        margin: 0 auto;
        flex-direction: column;
        background-color: #eee;
        padding: 16px;
        width: 350px;
    }
    input[type="checkbox"] {
        vertical-align: middle;
    }
    input[type="submit"] {
        margin: 5px auto;
    }
    input[type="text"], input[type="password"], input[type="email"] {
        width: 150px;
        display: block;
        margin: 5px auto;
    }
    label {
        font-size: 12px;
    }
}
.os-sign-up-btn {
    background-color: #fb8282;
    color: white;
}
.os-forgot-pwd-link {
    font-size: 12px;
}

#os-msg {
    position: fixed;
    top: 100px;
    left: 0;
    right: 0;
    z-index: 100;
    p {
        padding: 50px 0;
        text-align: center;
        background-color: rgba(255,255,255,0.8);
        &.os-err {
            background-color: rgba(200,0,0,0.7);
            color: white;
        }
    }
}

.os-page-main .os-page-header .os-connection-box {
    position: absolute;
    top: 15px;
    right: 15px;
}

.os-page-main:not(.os-connected) {
    .os-page-header {
        display: block;
        height: 40vh;
        .os-page-header-app-name {
            display: block;
            position: absolute;
            top: 30vh;
        }
    }
}

@media (max-width: $breakpoint1) {
    .os-page-footer { display: none; }
    .os-page-header {
        .os-connection-box, .os-page-header-app-name, .connected-user-box {
            display: none;
        }
    }
    .os-page-main {
        .os-page-header .os-connection-box {
            display: flex;
            flex-direction: column;
            position: absolute;
            top: 45vh;
            left: 0;
            width: 100%;
            .button {
                width: 150px;
                margin: 16px auto;
            }
        }
        &.os-not-connected .os-body {
            display: none;
        }
    }
    .os-page-header { display: block; }
}

